--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ argparse = "^1.4.0"
 asyncio = "^3.4.3"
 rpi-gpio = "^0.7.1"
 smbus = "^1.1.post2"
+paho-mqtt = "^1.6.1"
 
 [tool.poetry.scripts]
 accesscontroller = "accesscontroller.accesscontroller:main"
