--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -248,3 +249,5 @@ pyrightconfig.json
 *_REMOTE_*.txt
 
 # End of https://www.toptal.com/developers/gitignore/api/git
+
+*.service
